# calendar-backend

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/: dependabot.yml
.github/workflows/: build-and-test.yml  deploy_on_ec2.yml  deployment_to_k8s.yml
db/: backup.sh
k8s/: deployment.yaml  ingress.yaml  namespace.yaml  pvc.yaml  service.yaml
src/: lib.rs  main.rs  scheduler.rs  task.rs  types.rs
tests/: event.rs
