[package]
name = "calendar-backend"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
name = "calendar_backend_lib"

[[bin]]
path = "src/main.rs"
name = "calendar-backend"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.28"
env_logger = "0.11.8"
rusqlite = { version = "0.37.0", features = ["bundled", "array"] }
actix-web = { version = "4.11.0" }
actix-cors = "0.7.1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "test-util"] }
secrecy = { version = "0.10" }
anyhow = "1"
thiserror = "2"
regex = "1.12.2"
argon2 = { version = "0.5.3", features = ["std"] }
jsonwebtoken = "10.2.0"
chrono = "0.4.42"
chrono-tz = "0.10.4"
uuid = { version = "1.18.1", features = ["v4"] }
serial_test = "3.2.0"
